--- a/dissertation.bib
+++ b/dissertation.bib
@@ -1,17 +1,3 @@
-@misc{_ChorinMethodMOOSE_,
-  title = {Chorin Method {\textbar} {{MOOSE}}},
-  urldate = {2025-03-18},
-  howpublished = {https://mooseframework.inl.gov/modules/navier\_stokes/inschorin.html},
-  file = {/Users/christosdemetriou/Zotero/storage/6CLMZ95B/inschorin.html}
-}
-
-@misc{_GladstoneGoLogin_,
-  title = {{{GladstoneGo Login}}},
-  urldate = {2025-02-18},
-  howpublished = {https://sportwarwick.gladstonego.cloud/identity/Account/ResetPassword?linkid=71df95e5-16e9-419b-b338-3\&},
-  file = {/Users/christosdemetriou/Zotero/storage/R4TIXJ3G/ResetPassword.html}
-}
-
 @misc{_ShellIntegrationFeatures_,
   title = {Shell {{Integration}} - {{Features}}},
   journal = {Ghostty},
@@ -115,6 +101,31 @@
   langid = {english},
   pmid = {9541869},
   keywords = {Algorithms,Amino Acid Sequence,Amino Acids,Models Chemical,Molecular Sequence Data,Protein Folding,Proteins}
+}
+
+@article{bronislaw_TheoremeFunctionsDensembles_1928,
+  title = {Un Theoreme Sur Les Functions d'ensembles},
+  author = {Bronis{\l}aw, Knaster},
+  year = {1928},
+  volume = {6},
+  pages = {133--134}
+}
+
+@article{bund_SmallHazardFreeTransducers_2025,
+  title = {Small {{Hazard-Free Transducers}}},
+  author = {Bund, Johannes and Lenzen, Christoph and Medina, Moti},
+  year = {2025},
+  month = may,
+  journal = {IEEE Transactions on Computers},
+  volume = {74},
+  number = {5},
+  pages = {1549--1564},
+  issn = {1557-9956},
+  doi = {10.1109/TC.2025.3533096},
+  urldate = {2025-07-07},
+  abstract = {In digital circuits, hazardous input signals are a result of spurious operation of bistable elements. For example, the problem occurs in circuits with asynchronous inputs or clock domain crossings. Marino (TC'81) showed that hazards in bistable elements are inevitable. Hazard-free circuits compute the ``most stable'' output possible on hazardous inputs, under the constraint that it returns the same output as the circuit on stable inputs. Ikenmeyer et al. (JACM'19) proved an unconditional exponential separation between the hazard-free complexity and (standard) circuit complexity of explicit functions. Despite that, asymptotically optimal hazard-free sorting circuit are possible (Bund et al., TC'19). This raises the question: Which classes of functions permit efficient hazard-free circuits? We prove that circuit implementations of transducers with small state space are such a class. A transducer is a finite state machine that transcribes, symbol by symbol, an input string of length n into an output string of length n. We present a construction that transforms any function arising from a transducer into an efficient circuit that computes the hazard-free extension of the function. For transducers with constant state space, the circuit has asymptotically optimal size, with small constants if the state space is small.},
+  keywords = {Boolean functions,Circuits,Computational Complexity,Computers,Encoding,Fault-Tolerant Circuits,Hazards,Logic,Logic gates,Parallel Prefix Architecture,Standards,Symbols,Transducers},
+  file = {/Users/christosdemetriou/Zotero/storage/7LW7M45W/Bund et al. - 2025 - Small Hazard-Free Transducers.pdf;/Users/christosdemetriou/Zotero/storage/QGH7DZG9/10856331.html}
 }
 
 @inproceedings{carbonioliveira_HardnessMagnificationNatural_2018,
@@ -314,6 +325,22 @@
   file = {/Users/christosdemetriou/Zotero/storage/T2B38K7U/Fearnley et al. - 2021 - The complexity of gradient descent CLS = PPAD ∩ PLS.pdf}
 }
 
+@article{fearnley_FasterAlgorithmFinding_2022,
+  title = {A {{Faster Algorithm}}~for {{Finding Tarski Fixed Points}}},
+  author = {Fearnley, John and P{\'a}lv{\"o}lgyi, D{\"o}m{\"o}t{\"o}r and Savani, Rahul},
+  year = {2022},
+  month = oct,
+  journal = {ACM Trans. Algorithms},
+  volume = {18},
+  number = {3},
+  pages = {23:1--23:23},
+  issn = {1549-6325},
+  doi = {10.1145/3524044},
+  urldate = {2025-07-07},
+  abstract = {Dang et\&nbsp;al. have given an algorithm that can find a Tarski fixed point in a k-dimensional lattice of width n using O(log k n) queries\&nbsp;[2]. Multiple authors have conjectured that this algorithm is optimal\&nbsp;[2, 7], and indeed this has been proven for two-dimensional instances\&nbsp;[7]. We show that these conjectures are false in dimension three or higher by giving an O(log2 n) query algorithm for the three-dimensional Tarski problem. We also give a new decomposition theorem for k-dimensional Tarski problems which, in combination with our new algorithm for three dimensions, gives an O(log2 {$\lceil$}k/3{$\rceil$} n) query algorithm for the k-dimensional problem.},
+  file = {/Users/christosdemetriou/Zotero/storage/M34PN8WW/Fearnley et al. - 2022 - A Faster Algorithm for Finding Tarski Fixed Points.pdf}
+}
+
 @article{fearnley_UniqueEndPotential_2020,
   title = {Unique End of Potential Line},
   author = {Fearnley, John and Gordon, Spencer and Mehta, Ruta and Savani, Rahul},
@@ -360,6 +387,23 @@
   urldate = {2025-02-18},
   abstract = {It's one of the fundamental mathematical problems of our time, and its importance grows with the rise of powerful computers.},
   file = {/Users/christosdemetriou/Zotero/storage/AEHCRVKS/Fortnow - 2009 - The status of the P versus NP problem.pdf}
+}
+
+@article{friedrichs_MetastabilityContainingCircuits_2018,
+  title = {Metastability-{{Containing Circuits}}},
+  author = {Friedrichs, Stephan and F{\"u}gger, Matthias and Lenzen, Christoph},
+  year = {2018},
+  month = aug,
+  journal = {IEEE Transactions on Computers},
+  volume = {67},
+  number = {8},
+  pages = {1167--1183},
+  issn = {1557-9956},
+  doi = {10.1109/TC.2018.2808185},
+  urldate = {2025-07-07},
+  abstract = {In digital circuits, metastability can cause deteriorated signals that neither are logical 0 nor logical 1, breaking the abstraction of Boolean logic. Synchronizers, the only traditional countermeasure, exponentially decrease the odds of maintained metastability overtime. We propose a fundamentally different approach: It is possible to deterministically contain metastability by fine-grained logical masking so that it cannot infect the entire circuit. At the heart of our approach lies a time- and value-discrete model for metastability in synchronous clocked digital circuits, in which metastability is propagated in a worst-case fashion. The proposed model permits positive results and passes the test of reproducing Marino's impossibility results. We fully classify which functions can be computed by circuits with standard registers. Regarding masking registers, we show that more functions become computable with each clock cycle, and that masking registers permit exponentially smaller circuits for some tasks. Demonstrating the applicability of our approach, we present the first fault-tolerant distributed clock synchronization algorithm that deterministically guarantees correct behavior in the presence of metastability. As a consequence, clock domains can be synchronized without using synchronizers, enabling metastability-free communication between them.},
+  keywords = {clock synchronization,Clocks,Delays,Digital circuits,Integrated circuit modeling,Logic gates,logical masking,masking register,Metastability,metastability-containment,Registers,Synchronization},
+  file = {/Users/christosdemetriou/Zotero/storage/HSI6V46B/Friedrichs et al. - 2018 - Metastability-Containing Circuits.pdf}
 }
 
 @misc{goldberg_SurveyPPADCompletenessComputing_2011,
@@ -489,6 +533,22 @@
   file = {/Users/christosdemetriou/Zotero/storage/LXI76F24/Ji et al. - 2022 - MIP=RE.pdf;/Users/christosdemetriou/Zotero/storage/VBEK5L4J/2001.html}
 }
 
+@article{johnson_HowEasyLocal_1988,
+  title = {How Easy Is Local Search?},
+  author = {Johnson, David S. and Papadimitriou, Christos H. and Yannakakis, Mihalis},
+  year = {1988},
+  month = aug,
+  journal = {Journal of Computer and System Sciences},
+  volume = {37},
+  number = {1},
+  pages = {79--100},
+  issn = {0022-0000},
+  doi = {10.1016/0022-0000(88)90046-3},
+  urldate = {2025-07-07},
+  abstract = {We investigate the complexity of finding locally optimal solutions to NP-hard combinatorial optimization problems. Local optimality arises in the context of local search algorithms, which try to find improved solutions by considering perturbations of the current solution (``neighbors'' of that solution). If no neighboring solution is better than the current solution, it is locally optimal. Finding locally optimal solutions is presumably easier than finding optimal solutions. Nevertheless, many popular local search algorithms are based on neighborhood structures for which locally optimal solutions are not known to be computable in polynomial time, either by using the local search algorithms themselves or by taking some indirect route. We define a natural class PLS consisting essentially of those local search problems for which local optimality can be verified in polynomial time, and show that there are complete problems for this class. In particular, finding a partition of a graph that is locally optimal with respect to the well-known Kernighan-Lin algorithm for graph partitioning is PLS-complete, and hence can be accomplished in polynomial time only if local optima can be found in polynomial time for all local search problems in PLS.},
+  file = {/Users/christosdemetriou/Zotero/storage/Y2K6M3JG/Johnson et al. - 1988 - How easy is local search.pdf;/Users/christosdemetriou/Zotero/storage/4I79VN2K/0022000088900463.html}
+}
+
 @book{kleene_IntroductionMetamathematics_1950,
   title = {Introduction to {{Metamathematics}}},
   author = {Kleene, Stephen Cole},
@@ -545,6 +605,16 @@
   doi = {10.1109/TIT.1978.1055927},
   urldate = {2025-02-20},
   abstract = {The knapsack problem is an NP-complete combinatorial problem that is strongly believed to be computationally difficult to solve in general. Specific instances of this problem that appear very difficult to solve unless one possesses "trapdoor information" used in the design of the problem are demonstrated. Because only the designer can easily solve problems, others can send him information hidden in the solution to the problems without fear that an eavesdropper will be able to extract the information. This approach differs from usual cryptographic systems in that a secret key is not needed. Conversely, only the designer can generate signatures for messages, but anyone can easily check their authenticity.}
+}
+
+@article{mukaidono_BternaryLogicFunction_1972,
+  title = {On the {{B-ternary}} Logic Function},
+  author = {Mukaidono, Masao},
+  year = {1972},
+  month = jan,
+  journal = {Trans. IECE},
+  volume = {55},
+  pages = {355--362}
 }
 
 @incollection{mulmuley_GeometricComplexityTheory_2003,
